--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@flydotio/dockerfile": "^0.5.9",
+		"@tanstack/start": "^1.86.1",
 		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0"
+		"@types/react-dom": "^18.3.0",
+		"config": "link:@tanstack/start/config"
 	},
 	"dependencies": {
-    "@vitejs/plugin-react": "^4.3.2",
 		"@tanstack/react-router": "^1.86.1",
 		"@tanstack/router-devtools": "^1.86.1",
-    "@tanstack/router-plugin": "^1.86.0",
+		"@tanstack/router-plugin": "^1.86.0",
+		"@vitejs/plugin-react": "^4.3.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"vite": "^6.0.3"
-	}
+	},
+	"packageManager": "pnpm@9.4.0+sha1.9217c800d4ab947a7aee520242a7b70d64fc7638"
 }
