--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-	"name": "pandidorty.cz",
-	"version": "0.0.0",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"typecheck": "tsc --noEmit",
-		"dev": "vite --port=3001",
-		"build": "vite build",
-		"serve": "vite preview",
-		"start": "vite"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@flydotio/dockerfile": "^0.5.9",
-		"@tanstack/start": "^1.86.1",
-		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
-		"config": "link:@tanstack/start/config"
-	},
-	"dependencies": {
-		"@tanstack/react-router": "^1.86.1",
-		"@tanstack/router-devtools": "^1.86.1",
-		"@tanstack/router-plugin": "^1.86.0",
-		"@vitejs/plugin-react": "^4.3.2",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"vite": "^6.0.3"
-	},
-	"packageManager": "pnpm@9.4.0+sha1.9217c800d4ab947a7aee520242a7b70d64fc7638"
+  "name": "tanstack-start-example-basic",
+  "private": true,
+  "sideEffects": false,
+  "type": "module",
+  "scripts": {
+    "dev": "vinxi dev",
+    "build": "vinxi build",
+    "start": "vinxi start"
+  },
+  "dependencies": {
+    "@tanstack/react-router": "^1.120.10",
+    "@tanstack/react-router-devtools": "^1.120.10",
+    "@tanstack/react-start": "^1.120.10",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0",
+    "vinxi": "0.5.3"
+  },
+  "devDependencies": {
+    "@types/node": "^22.5.4",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2",
+    "vite-tsconfig-paths": "^5.1.4"
+  },
+  "packageManager": "pnpm@9.4.0+sha1.9217c800d4ab947a7aee520242a7b70d64fc7638"
 }
