--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "vinxi start"
   },
   "dependencies": {
+    "@tanstack/react-form": "^1.11.3",
+    "@tanstack/react-query": "^5.77.1",
     "@tanstack/react-router": "^1.120.10",
     "@tanstack/react-router-devtools": "^1.120.10",
     "@tanstack/react-start": "^1.120.10",
@@ -16,7 +18,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
-    "vinxi": "0.5.3"
+    "vinxi": "0.5.3",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
