--- a/package.json
+++ b/package.json
@@ -1,35 +1,42 @@
 {
-  "name": "tanstack-start-example-basic",
-  "private": true,
-  "sideEffects": false,
-  "type": "module",
-  "scripts": {
-    "dev": "vinxi dev",
-    "build": "vinxi build",
-    "start": "vinxi start"
-  },
-  "dependencies": {
-    "@tanstack/react-form": "^1.11.3",
-    "@tanstack/react-query": "^5.77.1",
-    "@tanstack/react-router": "^1.120.10",
-    "@tanstack/react-router-devtools": "^1.120.10",
-    "@tanstack/react-start": "^1.120.10",
-    "date-fns": "^4.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.6.0",
-    "vinxi": "0.5.3",
-    "zod": "^3.25.28"
-  },
-  "devDependencies": {
-    "@types/node": "^22.5.4",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2",
-    "vite-tsconfig-paths": "^5.1.4"
-  },
-  "packageManager": "pnpm@9.4.0+sha1.9217c800d4ab947a7aee520242a7b70d64fc7638"
+	"name": "tanstack-start-example-basic",
+	"private": true,
+	"sideEffects": false,
+	"type": "module",
+	"scripts": {
+		"dev": "vinxi dev",
+		"build": "vinxi build",
+		"start": "vinxi start",
+		"format": "biome format --write .",
+		"format:check": "biome format .",
+		"lint": "biome lint --write .",
+		"lint:check": "biome lint .",
+		"check": "biome check --write .",
+		"check:ci": "biome check ."
+	},
+	"dependencies": {
+		"@tanstack/react-form": "^1.11.3",
+		"@tanstack/react-query": "^5.77.1",
+		"@tanstack/react-router": "^1.120.10",
+		"@tanstack/react-router-devtools": "^1.120.10",
+		"@tanstack/react-start": "^1.120.10",
+		"date-fns": "^4.1.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"tailwind-merge": "^2.6.0",
+		"vinxi": "0.5.3",
+		"zod": "^3.25.28"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@types/node": "^22.5.4",
+		"@types/react": "^19.0.8",
+		"@types/react-dom": "^19.0.3",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.5.1",
+		"tailwindcss": "^3.4.17",
+		"typescript": "^5.7.2",
+		"vite-tsconfig-paths": "^5.1.4"
+	},
+	"packageManager": "pnpm@9.4.0+sha1.9217c800d4ab947a7aee520242a7b70d64fc7638"
 }
