--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@flydotio/dockerfile": "^0.7.10",
 		"@types/node": "^22.5.4",
 		"@types/react": "^19.0.8",
 		"@types/react-dom": "^19.0.3",
