--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"check:ci": "biome check ."
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.0.1",
 		"@tanstack/react-form": "^1.11.3",
 		"@tanstack/react-query": "^5.77.1",
 		"@tanstack/react-router": "^1.120.10",
@@ -23,6 +24,7 @@
 		"date-fns": "^4.1.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.56.4",
 		"tailwind-merge": "^2.6.0",
 		"vinxi": "0.5.3",
 		"zod": "^3.25.28"
