--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
 		"dev": "react-router dev",
 		"start": "react-router-serve ./build/server/index.js",
 		"typecheck": "react-router typegen && tsc",
-		"format": "biome check --write --unsafe ."
+		"format": "biome check --write --unsafe .",
+		"seed:admin": "tsx scripts/seed-admin.ts"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.0.1",
 		"@react-router/node": "^7.5.3",
 		"@react-router/serve": "^7.5.3",
 		"@tanstack/react-query": "^5.77.1",
+		"cookie": "^1.0.2",
 		"date-fns": "^4.1.0",
 		"dotenv": "^16.5.0",
 		"drizzle-orm": "^0.43.1",
@@ -29,11 +31,13 @@
 		"@biomejs/biome": "1.9.4",
 		"@react-router/dev": "^7.5.3",
 		"@tailwindcss/vite": "^4.1.4",
+		"@types/cookie": "^1.0.0",
 		"@types/node": "^20",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
 		"drizzle-kit": "^0.31.1",
 		"tailwindcss": "^4.1.4",
+		"tsx": "^4.19.4",
 		"typescript": "^5.8.3",
 		"vite": "^6.3.3",
 		"vite-tsconfig-paths": "^5.1.4"
