--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-dom": "^19.1.0",
 		"react-hook-form": "^7.56.4",
 		"react-router": "^7.5.3",
+		"resend": "^4.5.2",
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
