--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
 		"start": "react-router-serve ./build/server/index.js",
 		"typecheck": "react-router typegen && tsc",
 		"format": "biome check --write --unsafe .",
-		"seed:admin": "tsx scripts/seed-admin.ts"
+		"seed:admin": "tsx scripts/seed-admin.ts",
+		"deploy:test": "fly deploy -a pandidorty-cz-test",
+		"deploy:prod": "fly deploy -a pandidorty-cz",
+		"db:migrate": "drizzle-kit migrate",
+		"db:studio": "drizzle-kit studio",
+		"db:generate": "drizzle-kit generate",
+		"db:push": "drizzle-kit push"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.0.1",
