--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
 		"db:migrate": "drizzle-kit migrate",
 		"db:studio": "drizzle-kit studio",
 		"db:generate": "drizzle-kit generate",
-		"db:push": "drizzle-kit push"
+		"db:push": "drizzle-kit push",
+		"test:e2e": "playwright test",
+		"test:e2e:ui": "playwright test --ui",
+		"test:e2e:debug": "playwright test --debug",
+		"test:e2e:headed": "playwright test --headed",
+		"test:e2e:report": "playwright show-report"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.0.1",
@@ -21,30 +26,31 @@
 		"@tanstack/react-query": "^5.77.1",
 		"cookie": "^1.0.2",
 		"date-fns": "^4.1.0",
-		"dotenv": "^16.5.0",
-		"drizzle-orm": "^0.43.1",
+		"dotenv": "^17.2.1",
+		"drizzle-orm": "^0.44.4",
 		"isbot": "^5.1.27",
 		"pg": "^8.16.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-hook-form": "^7.56.4",
 		"react-router": "^7.5.3",
-		"resend": "^4.5.2",
-		"zod": "^3.24.1"
+		"resend": "^6.0.1",
+		"zod": "^4.0.17"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
+		"@biomejs/biome": "^2.2.0",
+		"@playwright/test": "^1.55.0",
 		"@react-router/dev": "^7.5.3",
 		"@tailwindcss/vite": "^4.1.4",
 		"@types/cookie": "^1.0.0",
-		"@types/node": "^20",
+		"@types/node": "^24.3.0",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
 		"drizzle-kit": "^0.31.1",
 		"tailwindcss": "^4.1.4",
 		"tsx": "^4.19.4",
 		"typescript": "^5.8.3",
-		"vite": "^6.3.3",
+		"vite": "^6.3.5",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
 }
